update structure and some pages

--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Main page</title>
         <meta name="description" content="Simple advertisement service">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/styles.css"> 
+        <link rel="stylesheet" href="/css/style.css"> 
     </head>
-    <body>
-       <main>
-           <header>
+    <body class = "home">
+       <div class = "main_container">
+        <section class ="navbar">
                <nav>
-                   <img class="logo" src="files/ADSERVICE.svg"/>
+                   <img class="logo" src="/files/ADSERVICE.svg">
                    <div class = "links">
-                       <a href="#">Search advertisements</a>
-                       <a class="button_med" href="#">Sign Up</a>
-                       <a class="button_med" href="#">Login</a>
+                       <a>Search advertisements</a>
+                       <a class="button_med">Sign Up</a>
+                       <a class="button_med">Login</a>
                    </div>
                </nav>
-           </header>
+            </section>
            <section class ="info">
                <h1 class = "hero_font">An online advertising platform</h1>
             </section>
-       </main>
+        </div>
     </body>
 </html>
