--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Main page</title>
         <meta name="description" content="Simple advertisement service">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/css/style.css"> 
+        <link rel="stylesheet" href="css/style.css"> 
     </head>
     <body class = "home">
        <div class = "main_container">
