--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <div class = "main_container">
         <section class ="navbar">
                <nav>
-                   <img class="logo" src="/files/ADSERVICE.svg">
+                   <img class="logo" src="files/ADSERVICE.svg">
                    <div class = "links">
                        <a>Search advertisements</a>
                        <a class="button_med">Sign Up</a>
