--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Simple advertisement service">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css"> 
+        <script src="src/index.js" type="module" defer></script>
     </head>
     <body class = "home">
        <div class = "main_container">
@@ -14,9 +15,9 @@
                <nav>
                    <img class="logo" src="files/ADSERVICE.svg">
                    <div class = "links">
-                       <a>Search advertisements</a>
-                       <a class="button_med">Sign Up</a>
-                       <a class="button_med">Login</a>
+                       <a id = "SearchAds">Search advertisements</a>
+                       <a class="button_med" id="SignButton">Sign Up</a>
+                       <a class="button_med" id="loginButton">Login</a>
                    </div>
                </nav>
             </section>
