--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <script src="src/login.js" type="module" defer></script>
     <title>Login Form</title>
   </head>
   <body>
@@ -13,23 +14,17 @@
        <div class="title">
            <h1>Login</h1>
        </div>
-        <div class="main-form">
-            <div class="input-icons">
-                <i class="icon-username">
-              </i>
-                <input class="input-field" 
-                       type="text" 
-                       placeholder="Username">
-            </div>
+        <form class="main-form">
+          <input type="text" name = "username" placeholder="Username">
           <input type="password" name="password" placeholder="Password" />
           <a href="#">I forgot my password. Click here to reset</a>
-          <button>Login</button>
-        </div>
+          <button id="loginButton">Login</button>
+        </form>
+        <div id="error-message"></div>
       </div>
-
       <div class="section-two">
         <div class="new-account">
-          <button>Create New Account</button>
+          <button href="registration.html">Create New Account</button>
         </div>
       </div>
     </div>
